--- a/main.html
+++ b/main.html
@@ -8,10 +8,18 @@
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 
+<style>
+  @import url("main.css");
+  p {font-size: 16px;
+  }
+  body {
+  background-color: lightblue;
+}
+</style>
+
 <body>
 
 <header>
-  <img src="img/KimiNoNaWa.png" alt="TmpHeader logo" class="logo" width = "1000" height="521">
   <nav>
     <ul>
       <li><a href="">Home</a></li>
