added hyperlinks to pages

--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
 <header>
   <nav>
     <ul>
-      <li><a href="">Home</a></li>
-      <li><a href="">About</a></li>
-      <li><a href="">Contact</a></li>
+      <li><a href="main.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
@@ -33,17 +33,17 @@
 
 <div class="centre">
 <p> Welcome to my website. It's pretty empty right now because I'm new to 
-    making a website, so bear with the simple layouts :) A little background - I have been in the coding world 3 years now. 
+    making a website, so bear with the simple layouts :) A little background - I have been in the coding world 2 years now. 
     I primarly work as a bioinformatics using R, python, bash and SQL. I would like to learn front-end languages like html and css (which 
-    I am using now!) and slowly learn back-end. Also understand what web framework are.</p>
+    I am using now!) and slowly learn back-end.</p>
 </div>
  
 <div class="centre">
 <p> Skills:</p>
 <img src="img/Rlogo.png" alt="Rlogo" style="width:128px;height:128px;">
 <img src="img/PythonLogo.png" alt="Python" style="width:128px;height:128px;">
-<img src="img/PostgresSQLLolo.png" alt="SQL" style="width:128px;height:128px;">
-<img src="img/Github.png" alt="Github" style="width:128px;height:128px;">
+<img src="img/Postgresql_logo.png" alt="SQL" style="width:128px;height:128px;">
+<img src="img/GitHub-Mark.png" alt="Github" style="width:128px;height:128px;">
 <img src="img/Linux.png" alt="Linux" style="width:128px;height:128px;">
 </div>
 
